--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.domain=C:/Users/ADMIN/Documents/NetBeansProjects
+j2ee.server.domain=D:/HK7/Lap trinh Web/Project/Tomcat 9
 j2ee.server.home=D:/Eclipse Workspace/apache-tomcat-9.0.12
-j2ee.server.instance=tomcat90:home=D:\\Eclipse Workspace\\apache-tomcat-9.0.12:base=C:\\Users\\ADMIN\\Documents\\NetBeansProjects
+j2ee.server.instance=tomcat90:home=D:\\Eclipse Workspace\\apache-tomcat-9.0.12:base=D:\\HK7\\Lap trinh Web\\Project\\Tomcat 9
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
