--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mssql-jdbc-7.0.0.jre8.jar=D:\\Eclipse Workspace\\sqljdbc_7.0\\enu\\mssql-jdbc-7.0.0.jre8.jar
+file.reference.mssql-jdbc-7.0.0.jre8.jar=lib/nblibraries.properties/mssql-jdbc-7.0.0.jre8.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
